info de miembros

--- a/conexion_github.html
+++ b/conexion_github.html
@@ -17,8 +17,18 @@
 	font-style: normal;
 	}
 
+	#irmiembros{
+		font-size: 1em;
+		font-weight: bold;
+	}	
 	#result2{
 		
+	}
+
+	.avatares{
+		display:inline-block;
+		margin:0 1em;
+		width:150px;
 	}
 
 	.dir:before{
@@ -36,7 +46,7 @@
 		font-size: 2em;
 		font-family: icomoon;
 		margin-right: 0.5em;
-	}	
+	}
 
 	.jumbotron{
 		text-align: center;
