--- a/eminem.html
+++ b/eminem.html
@@ -13,32 +13,34 @@
 		<section id="slider">
 			<a href="#" id="left"></a>
 			<div id="marco">
-				<div class="slide">
-					<a href="#" data-bgc="#EA6045" class="item_slide">
-						<span></span>
-					</a>
-					<a href="#" data-bgc="#F8CA4D" class="item_slide">
-						<span></span>
-					</a>
-					<a href="#" data-bgc="#3F5666" class="item_slide">
-						<span></span>
-					</a>
-					<a href="#" data-bgc="#2F3440" class="item_slide">
-						<span></span>
-					</a>
-				</div>
-				<div class="slide">
-					<a href="#" data-bgc="#41AEDF" class="item_slide">
-						<span></span>
-					</a>
-					<a href="#" data-bgc="#B181E8" class="item_slide">
-						<span></span>
-					</a>
-				</div>
-				<div class="slide">
-					<a href="#" data-bgc="#FF645B" class="item_slide">
-						<span></span>
-					</a>
+				<div id="slidesall">
+					<div class="slide">
+						<a href="#" data-bgc="#EA6045" class="item_slide">
+							<span></span>
+						</a>
+						<a href="#" data-bgc="#F8CA4D" class="item_slide">
+							<span></span>
+						</a>
+						<a href="#" data-bgc="#3F5666" class="item_slide">
+							<span></span>
+						</a>
+						<a href="#" data-bgc="#2F3440" class="item_slide">
+							<span></span>
+						</a>
+					</div>
+					<div class="slide">
+						<a href="#" data-bgc="#41AEDF" class="item_slide">
+							<span></span>
+						</a>
+						<a href="#" data-bgc="#B181E8" class="item_slide">
+							<span></span>
+						</a>
+					</div>
+					<div class="slide">
+						<a href="#" data-bgc="#FF645B" class="item_slide">
+							<span></span>
+						</a>
+					</div>
 				</div>
 			</div>
 			<a href="#" id="right"></a>
