añadiendo items al slide
todo dinamico

--- a/eminem.html
+++ b/eminem.html
@@ -41,6 +41,17 @@
 							<span></span>
 						</a>
 					</div>
+					<div class="slide">
+						<a href="#" data-bgc="#FF6600" class="item_slide">
+							<span></span>
+						</a>
+						<a href="#" data-bgc="#464646" class="item_slide">
+							<span></span>
+						</a>
+						<a href="#" data-bgc="#FFFFFA" class="item_slide">
+							<span></span>
+						</a>
+					</div>
 				</div>
 			</div>
 			<a href="#" id="right"></a>
