jugando con el slider

--- a/eminem.html
+++ b/eminem.html
@@ -1,65 +1,80 @@
 <!doctype html>
 <html lang="es">
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Eminem</title>
 	<link rel="stylesheet" href="eminem.css">
+	<link rel="stylesheet" href="meanmenu.min.css">
 </head>
 <body>
-	<div id="contenedor">
+	
 		<header>
 			<h1><a href="www.eminem.com"><span>eminem</span></a></h1>
+			<nav class="nav-collapse"><ul>
+				<li>Link 1</li>
+				<li>Link 2</li>
+				<li>Link 3</li>
+				<li>Link 4</li>
+				<li>Link 5</li>
+				<li>Link 6</li>
+				<li>Link 7</li>
+			</ul></nav>
 		</header>
 
 		<section id="slider">
 			<a href="#" id="left"></a>
 			<div id="marco">
-				<div id="slidesall">
-					<div class="slide">
-						<a href="#" data-bgc="#EA6045" class="item_slide">
-							<span></span>
-						</a>
-						<a href="#" data-bgc="#F8CA4D" class="item_slide">
-							<span></span>
-						</a>
-						<a href="#" data-bgc="#3F5666" class="item_slide">
-							<span></span>
-						</a>
-						<a href="#" data-bgc="#2F3440" class="item_slide">
-							<span></span>
-						</a>
-					</div>
-					<div class="slide">
-						<a href="#" data-bgc="#41AEDF" class="item_slide">
-							<span></span>
-						</a>
-						<a href="#" data-bgc="#B181E8" class="item_slide">
-							<span></span>
-						</a>
-					</div>
-					<div class="slide">
-						<a href="#" data-bgc="#FF645B" class="item_slide">
-							<span></span>
-						</a>
-					</div>
-					<div class="slide">
-						<a href="#" data-bgc="#FF6600" class="item_slide">
-							<span></span>
-						</a>
-						<a href="#" data-bgc="#464646" class="item_slide">
-							<span></span>
-						</a>
-						<a href="#" data-bgc="#FFFFFA" class="item_slide">
-							<span></span>
-						</a>
-					</div>
+				
+				<div class="slide">
+					<a href="#" data-bgc="#EA6045" class="item_slide">
+						<span></span>
+					</a>
+					<a href="#" data-bgc="#F8CA4D" class="item_slide">
+						<span></span>
+					</a>
+					<a href="#" data-bgc="#3F5666" class="item_slide">
+						<span></span>
+					</a>
+					<a href="#" data-bgc="#2F3440" class="item_slide">
+						<span></span>
+					</a>
 				</div>
+				<div class="slide">
+					<a href="#" data-bgc="#41AEDF" class="item_slide">
+						<span></span>
+					</a>
+					<a href="#" data-bgc="#B181E8" class="item_slide">
+						<span></span>
+					</a>
+				</div>
+				<div class="slide">
+					<a href="#" data-bgc="#FF645B" class="item_slide">
+						<span></span>
+					</a>
+				</div>
+				<div class="slide">
+					<a href="#" data-bgc="#FF6600" class="item_slide">
+						<span></span>
+					</a>
+					<a href="#" data-bgc="#464646" class="item_slide">
+						<span></span>
+					</a>
+					<a href="#" data-bgc="#FFFFFA" class="item_slide">
+						<span></span>
+					</a>
+				</div>
+				
 			</div>
 			<a href="#" id="right"></a>
 
 		</section>
-	</div>
+	
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="jquery.mobile.custom.min.js"></script>
+<script src="jquery.meanmenu.min.js"></script>
 <script src="eminem.js"></script>
 </body>
 </html>
