--- a/eminem.html
+++ b/eminem.html
@@ -11,7 +11,7 @@
 	
 		<header>
 			<h1><a href="www.eminem.com"><span>eminem</span></a></h1>
-			<nav class="nav-collapse"><ul>
+			<!--<nav class="nav-collapse"><ul>
 				<li>Link 1</li>
 				<li>Link 2</li>
 				<li>Link 3</li>
@@ -19,7 +19,7 @@
 				<li>Link 5</li>
 				<li>Link 6</li>
 				<li>Link 7</li>
-			</ul></nav>
+			</ul></nav>-->
 		</header>
 
 		<section id="slider">
